[*] edit-organizationUser-without-assets.tsx (add animation button Save after updating roles) [+] blobal.scss (add scrollbar-gutter: stable both-edges from html) [*] my-account-modal.module.scss (corrected styles) [*] user-account-detail.module.scss (corrected styles)

--- a/src/components/my-account-modal/my-account-modal.module.scss
+++ b/src/components/my-account-modal/my-account-modal.module.scss
@@ -23,6 +23,10 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	h1{
+		margin-block-start: 0;
+		margin-block-end: 0;
+	}
 }
 
 .buttons {
