--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -24,6 +24,7 @@ html {
 	/* Firefox scrollbar */
 	scrollbar-color: $accent #fff;
 	scrollbar-width: thin;
+	scrollbar-gutter: stable both-edges;
 
 	/* Smooth scrolling IF user doesn't have a preference due to motion sensitivities */
 	@media screen and (prefers-reduced-motion: no-preference) {
